--- a/app/views/meals/index.html.slim
+++ b/app/views/meals/index.html.slim
@@ -1,19 +1,30 @@
 .meals-index
-  h1 My meals
+  h1 
+    span My meals
+    .btn.btn-default.new-meal
+      .fa.fa-plus data-title='Add a new one'
 
   /! ko foreach: days
   .date-reg
-    .date 
-      .day   data-bind='text: day'
-      .month data-bind='text: month'
+    .info
+      .date 
+        .day   data-bind='text: day'
+        .month data-bind='text: month'
+      .total
+        .panel-heading Calories
+        .panel-body data-bind='text: total'
     .meals
       /! ko foreach: meals
       .meal-reg
         .time     data-bind='text: time'
-        .meal     data-bind='text: meal'
         .calories data-bind='text: calories'
+        .meal     data-bind='text: meal'
+        .tools
+          .btn.btn-default.btn-xs
+            .fa.fa-pencil data-title='Edit'
+          .btn.btn-default.btn-xs
+            .fa.fa-remove data-title='Delete'
       /! /ko
-    .total data-bind='text: total'
   /! /ko
   
   = link_to 'New Meal', new_meal_path
