--- a/app/assets/stylesheets/meals.scss
+++ b/app/assets/stylesheets/meals.scss
@@ -20,8 +20,73 @@
       @extend h3;
     }
   }
+  
   .new-meal {
+    @extend .btn;
+    @extend .btn-default;
+    
     float: right;
+    
+    &:hover {
+      @extend .btn-info;
+    };
+  }
+  
+  .new-meal-form {
+    @extend .well;
+    margin: 10px auto 20px;
+    width: 60%;
+    
+    
+    label { margin-right: 10px; }
+    
+    .buttons {
+      text-align:center;
+      button {
+        @extend .btn;
+        @extend .btn-default;
+        width: 200px;
+        margin-right: 30px;
+        
+        &:last-child { margin-right: 0px; }
+      } 
+      
+      .save {
+        &:hover { @extend .btn-success; }
+      }
+      
+      .cancel {
+        &:hover { @extend .btn-danger; }
+      }
+    }
+    
+    input, select { 
+      margin-right: 20px; 
+      height: auto;
+      padding: 5px 10px;
+    }
+    
+    form { 
+      margin-bottom: 20px;
+    
+      &:last-child { margin-bottom: 0;};
+    }
+    
+    input.date, input.calories { width: 120px; }
+    
+    .hours { 
+      margin-right: 5px; 
+    }
+    
+    option { text-align: right; }
+    
+    .sep {
+      margin-right: 2px;
+    }
+    input.meal {
+      width: 50%;
+      min-width: 400px;
+    }
   }
   
   .date-reg {
