--- a/app/views/meals/index.html.slim
+++ b/app/views/meals/index.html.slim
@@ -26,7 +26,7 @@
             .form-group
               label.col-xs-2 Calories
               .col-xs-4
-                input.form-control.calories name='meal_calories' type='number' data-bind='value: calories'
+                input.form-control.calories name='meal_calories' type='number' data-bind='value: cal_vm'
             .form-group
               label.col-xs-2 Meal
               .col-xs-8
@@ -57,8 +57,10 @@
         .calories data-bind='text: calories'
         .meal     data-bind='text: meal'
         .tools
-          button.edit   data-bind="edit": .fa.fa-pencil data-title='Edit' 
-          button.delete data-bind="delete": .fa.fa-trash data-title='Delete'
+          button.edit data-bind="click: edit"
+            .fa.fa-pencil data-title='Edit' 
+          button.delete data-bind="click: remove"
+            .fa.fa-trash data-title='Delete'
       /! /ko
   /! /ko
   
