--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
  *
  *= require bootstrap-datepicker3
  *= require pnotify
+ *= require devise_bootstrap_views
  // require_tree .
  // require_self
  */
@@ -21,6 +22,7 @@
 @import "bootstrap";
 @import "font-awesome";
 @import "meals";
+@import "login";
 
 body {
     min-height: 2000px;
