--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,21 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
           </ul>
+          <% if current_user %>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" 
+                 role="button" aria-haspopup="true" aria-expanded="false">
+                <%= fa_icon 'user' %>
+                <%= current_user.email %>
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Logout</a></li>
+              </ul>
+            </li>
+          </ul>
+          <% end %>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
