--- a/app/assets/stylesheets/meals.scss
+++ b/app/assets/stylesheets/meals.scss
@@ -21,6 +21,47 @@
     }
   }
   
+  .calories-per-day {
+    background: $gray-lighter;
+    border: 1px solid $gray;
+    margin-top: 30px;
+    @extend .alert;
+    width: 50%;
+    margin: 30px auto;
+    font-size: 1.5em;
+    
+    form {
+      padding: 5px;
+      text-align: center;
+      height: 50px;
+      vertical-align: middle;
+    }
+
+    button {
+      @extend .btn;
+      @extend .btn-xs;
+      @extend .btn-default;
+      
+      &.edit   { &:hover { @extend .btn-info; }}
+      &.save   { &:hover { @extend .btn-success; }}
+      &.cancel { &:hover { @extend .btn-danger; }}
+    }
+
+    form {
+      background: $gray-lighter;
+      input, label, button {
+        margin-right: 10px;
+      }
+      
+      input, .form-control-static {
+//        padding: 2px 10px;
+//        height: 30px;
+        width: 80px;
+        text-align: right;
+      }
+    }
+  }
+  
   .new-meal {
     @extend .btn;
     @extend .btn-default;
