Added style binding to highlight meals that are above the total daily intake

--- a/app/assets/stylesheets/meals.scss
+++ b/app/assets/stylesheets/meals.scss
@@ -191,6 +191,14 @@
         }
       }
     }
+    &.red {
+      .info .total { @extend .panel-danger; }
+    }
+    
+    &.green {
+      .info .total { @extend .panel-success; }
+    }
+    
     
     .meals {
       display: table-cell;
