Added datetimepicker, added JS Filter model

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,7 @@
 @import "font-awesome";
 @import "meals";
 @import "login";
+@import 'bootstrap-datetimepicker';
 
 body {
     min-height: 2000px;
