--- a/app/assets/stylesheets/meals.scss
+++ b/app/assets/stylesheets/meals.scss
@@ -62,6 +62,19 @@
     }
   }
   
+  #filter {
+    margin: 20px auto;
+    text-align:center;
+
+    .date-from, .date-to {
+      width: 180px;
+    }
+    
+    .time-to, .time-from {
+      width: 140px;
+    }
+  }
+  
   .new-meal {
     @extend .btn;
     @extend .btn-default;
