--- a/app/views/meals/index.html.slim
+++ b/app/views/meals/index.html.slim
@@ -18,7 +18,7 @@
       = fa_icon 'plus'
 
   form#filter.form-inline data-bind='with: filter'
-    .form-group
+    .form-group data-bind="css: {active: active}"
       .input-group.date-time-picker.date-from
          input.form-control readonly='' type='text' 
          span.input-group-addon= fa_icon 'calendar'
@@ -31,13 +31,16 @@
       .input-group.date.date-time-picker.time-to
          input.form-control readonly='' type='text' 
          span.input-group-addon= fa_icon 'clock-o'
-    button.btn.btn-default data-bind='click: apply, visible: inactive'
+    button.search data-bind='click: apply, visible: inactive'
       = fa_icon 'search'                   
-    button.btn.btn-default data-bind='click: cancel, visible: active'
-      = fa_icon 'close'                   
+    button.cancel data-bind='click: cancel, visible: active'
+      = fa_icon 'spinner', class: 'fa-spin'
 
-  .empty-meals data-bind='visible: days().length == 0'
+  .empty-meals data-bind='visible: emptyMeals'
     .message No entries available, please add a new one
+
+  .empty-meals data-bind='visible: emptyFilter'
+    .message No entries match the filter, please try again
 
   = render partial: 'form'
 
