Changed the filter to be a computed to reflect changes

--- a/app/views/meals/index.html.slim
+++ b/app/views/meals/index.html.slim
@@ -44,7 +44,7 @@
 
   = render partial: 'form'
 
-  /! ko foreach: days
+  /! ko foreach: filtered
   .date-reg data-bind='css: matchTotal'
     .info
       .date 
