--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <title>Calories</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= javascript_tag '$.fx.off = true;' if Rails.env.test? %>  
+  <!-- <%= javascript_tag '$.fx.off = true;' if Rails.env.test? %>   -->
   <%= csrf_meta_tags %>
 </head>
 <body>
