--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,10 @@
         </div>
         <div class="navbar-collapse collapse" id="navbar">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="<%= root_path %>">Home</a></li>
+            <% if current_user.admin? %>
+            <li class="active"><a href="<%= admin_root_path %>">Admin</a></li>
+            <% end %>
           </ul>
           <% if current_user %>
           <ul class="nav navbar-nav navbar-right">
