--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,9 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <!-- <%= javascript_tag '$.fx.off = true;' if Rails.env.test? %>   -->
+  <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/knockout-validation/2.0.3/knockout.validation.min.js" %>
+
+  
   <%= csrf_meta_tags %>
 </head>
 <body>
