--- a/app/views/meals/index.html.slim
+++ b/app/views/meals/index.html.slim
@@ -55,6 +55,12 @@ javascript:
   
 coffee:
   $ -> 
+    ko.validation.init
+      insertMessages: false
+      decorateElement: true
+      errorElementClass: 'has-error'
+      errorMessageClass: 'help-inline'
+
     vm = new MealsApp.MealsIndexViewModel(mealsJson, currentUser)
     ko.applyBindings vm, $('.meals-index')[0] 
     
