--- a/app/views/meals/_form.html.slim
+++ b/app/views/meals/_form.html.slim
@@ -6,21 +6,20 @@
       .modal-body
         form.form-horizontal
           .form-group
-            label.col-xs-2 for='date' Date
+            label.col-xs-2 Date
             .col-xs-4
-              .input-group.date
-                input.form-control.date.date_picker type='text' name='meal_date' data-provide='datepicker' data-bind='value: date_vm, enable: isNewMeal'
+              .input-group.date.date-time-picker
+                input.form-control readonly='' type='text' title='Meal date'
                 span.input-group-addon= fa_icon 'calendar'
-                
             label.col-xs-1 Time
-            .col-xs-4
-              select.form-control.hours name='meal_hours' type='text' data-bind="options: hours_vm, value: hour"
-              span.sep= ':'
-              select.form-control.min name='meal_minutes' type='text' data-bind='options: minutes_vm, value: minutes'
-              
+            .col-xs-3
+              .input-group.time.date-time-picker
+                input.form-control type='text' readonly='' title='Meal time'
+                span.input-group-addon= fa_icon 'clock-o'
+
           .form-group data-bind='validationElement: calories'
             label.col-xs-2 Calories
-            .col-xs-4
+            .col-xs-3
               input.form-control.calories name='meal_calories' type='number' data-bind='value: cal_vm'
               
           .form-group data-bind='validationElement: meal'
