--- a/app/assets/stylesheets/meals.scss
+++ b/app/assets/stylesheets/meals.scss
@@ -153,6 +153,10 @@
 //      padding: 5px 10px;
     }
     
+    i {
+      cursor: pointer;
+    }
+    
     select { 
       display: inline-block; 
       width: auto;
